--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,13 @@ env/
 # OS
 Thumbs.db
 Desktop.ini
+# PalmPlay Specific
+local_music/
+uploaded_music/
+*.whl
+hand_landmarker.task
+
+# Frontend
+frontend/node_modules/
+frontend/dist/
+.env.bak
